appId: ${APP_ID}
---
- tapOn:
    id: "More-tab-item"

- waitForAnimationToEnd

- tapOn:
    id: "LogOut-menu-item"

- waitForAnimationToEnd

- tapOn: "LOGOUT"

- waitForAnimationToEnd
